set overflow-x property to hidden to prevent overflow of text in display bar

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    overflow-x:hidden;
 }
 
 .calculatorKeys{
